Fixed response layout issues for multiple responses

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -547,6 +547,9 @@
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
+  .grid-cols-\[repeat\(auto-fit\,minmax\(18rem\,1fr\)\)\] {
+    grid-template-columns: repeat(auto-fit,minmax(18rem,1fr));
+  }
   .flex-col {
     flex-direction: column;
   }
